<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/wl_title1" />

    <RelativeLayout
        android:id="@+id/setting1"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:background="@drawable/item_fruit_back" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:src="@drawable/setting1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="152dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting1"
                android:textSize="@dimen/txt_large_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/setting11"
                android:textColor="#a4a4a4"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="152dp"
        android:src="@color/line2" />

    <RelativeLayout
        android:id="@+id/setting2"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:background="@drawable/item_fruit_back" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:src="@drawable/setting2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="152dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting2"
                android:textSize="@dimen/txt_large_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/setting22"
                android:textColor="#a4a4a4"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="152dp"
        android:src="@color/line2" />

    <RelativeLayout
        android:id="@+id/setting3"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:background="@drawable/item_fruit_back" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:src="@drawable/setting3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="152dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting3"
                android:textSize="@dimen/txt_large_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/setting33"
                android:textColor="#a4a4a4"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="152dp"
        android:src="@color/line2" />

    <RelativeLayout
        android:id="@+id/setting4"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:background="@drawable/item_fruit_back" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:src="@drawable/setting4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="152dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting4"
                android:textSize="@dimen/txt_large_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/setting44"
                android:textColor="#a4a4a4"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>