<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_abstruct"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <TextView
        	android:id="@+id/tv_signup_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/signup_top_bar"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_large_size" />

        <ImageButton
            android:id="@+id/btn_signup_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:background="@null"
            android:src="@drawable/title_back_selector" />
    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/vf_signup"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="25dp" >

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/register_phone" />

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/register_verfiycode" >
        </include>

        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/register_passwd" >
        </include>
    </ViewFlipper>

    <TextView
        android:id="@+id/signup_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/signup_text"
        android:textSize="@dimen/txt_tiny_size"
        android:textColor="#646464" >
    </TextView>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/btn_corner_selector"
        android:text="@string/next"
        android:textColor="@color/clr_3e"
        android:textSize="@dimen/btn_normal_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <CheckBox
            android:id="@+id/ck_signup_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:button="@drawable/reg_agree_selector"
            android:paddingLeft="10dp"
            android:text="@string/signup_agree_read"
            android:textColor="#717171"
            android:textSize="@dimen/txt_tiny_size" />

        <TextView
            android:id="@+id/tv_signup_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4994f1"
            android:textSize="@dimen/txt_tiny_size" />
    </LinearLayout>

</LinearLayout>